fix(ci): correct YAML formatting in workflow files
- Remove unnecessary quotes from string values
- Use unquoted boolean values (true instead of "true")
- Use unquoted paths (./src instead of "./src")
- Fix validate.yml to reference ./src instead of ./features

--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -9,8 +9,8 @@ jobs:
     steps:
       - uses: actions/checkout@v6
 
-      - name: "Validate devcontainer-feature.json files"
+      - name: Validate devcontainer-feature.json files
         uses: devcontainers/action@v1
         with:
-          validate-only: "true"
-          base-path-to-features: "./features"
+          validate-only: true
+          base-path-to-features: ./src
