feat: improve feature portability and add proper tests
- Use $_REMOTE_USER_HOME in install scripts for vanilla image support
- Rename openvpn-cli to openvpn
- Add capAdd for NET_ADMIN and NET_RAW to openvpn feature
- Add NOTES.md documenting --device=/dev/net/tun requirement
- Replace test scripts with proper devcontainer test format
- Add ghcr.io/devcontainers/templates/python:5.0.0 to test matrix
- Add openvpn to CI test matrix

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -16,10 +16,12 @@ jobs:
           - onepassword-cli
           - gcloud-cli
           - terraform
+          - openvpn
         baseImage:
           - debian:latest
           - ubuntu:latest
           - mcr.microsoft.com/devcontainers/base:ubuntu
+          - ghcr.io/devcontainers/templates/python:5.0.0
     steps:
       - uses: actions/checkout@v6
 
@@ -38,6 +40,7 @@ jobs:
           - onepassword-cli
           - gcloud-cli
           - terraform
+          - openvpn
     steps:
       - uses: actions/checkout@v6
 
