fix(ci): add openvpn scenario script and avoid scenario fail-fast
- Add test/openvpn/install-only.sh required by scenarios.json
- Set test-scenarios fail-fast: false so one failure doesn't cancel others

Note: .devcontainer.json has local changes but is intentionally not committed.

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -34,6 +34,7 @@ jobs:
   test-scenarios:
     runs-on: ubuntu-latest
     strategy:
+      fail-fast: false
       matrix:
         features:
           - aws-cli
