feat(direnv): add feature and install duplo direnvrc
- New feature: src/direnv installs direnv and copies direnvrc to $HOME/direnv/direnvrc
- Add test/direnv/test.sh for autogenerated feature tests
- Add direnv to CI autogenerated matrix
- Update README feature links

Note: .devcontainer.json has local changes but is intentionally not committed.

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -16,6 +16,7 @@ jobs:
         - aws-cli
         - onepassword-cli
         - gcloud-cli
+        - direnv
         - terraform
         baseImage:
         - debian:latest
